<resources>
    <string name="app_name">BakuBoutiqueHub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="luxury_dresses_for_every_occasion">Luxury dresses for every occasion</string>
    <string name="next">Sonrakı</string>
    <string name="skip">Keç</string>
    <string name="sustainable_fashion_smarter_choice">Sustainable fashion,smarter choice</string>
    <string name="do_you_have_an_account">Hesabınız var?</string>
    <string name="login">Giriş edin</string>
    <string name="easy_and_premium_rental">asan və premium kirayəsi</string>
    <string name="women_s_dresses_for_events">Qadın paltarlarının tədbirə görə</string>
    <string name="start">Başlayaq</string>
    <string name="sign_up"> Qeydiyyatdan keçin</string>
    <string name="xo_g_ldiniz_giri_m_lumatlar_n_z_daxil_edin">Xoş gəldiniz. Giriş məlumatlarınızı daxil edin</string>
    <string name="e_po_t">E-poçt</string>
    <string name="e_po_t_nvan">E-poçt ünvanı</string>
    <string name="parol">Parol</string>
    <string name="giri">Giriş</string>
    <string name="v_ya">Və ya</string>
    <string name="google_il_davam_edin">Google ilə davam edin</string>
    <string name="hesab_n_z_yoxdur">Hesabınız yoxdur?</string>
    <string name="qeydiyyatdan_ke">Qeydiyyatdan keç</string>
    <string name="biznesinizin_elave_melumatlarini_qeyd_edin">Biznesinizin əlavə məlumatlarını qeyd edin</string>
    <string name="biznes_info">Biznes məlumatları</string>
    <string name="logonuzu_elave_edin">Logonuzu əlavə edin</string>
    <string name="fayl_secin">Faylınızı seçin</string>
    <string name="unvan">Ünvan</string>
    <string name="map_button">Xəritədən seçin</string>
    <string name="qısa_bio_tesvir">Qısa Bio/Təsvir</string>
    <string name="ish_gunlenizi_secin">İş günlərinizi seçin</string>
    <string name="ish_saatlarinizi_secin">İş saatınızı seçin</string>
    <string name="sosial_media_linkleri">Sosial media linkləri</string>
</resources>