<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context=".onboardingscreens.OnBoarding1Fragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/onboarding1pics"
        android:scaleType="centerCrop"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66000000" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/skipButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/white"
        android:text="@string/skip"
        app:icon="@drawable/arrow_forward"
        app:iconTint="@color/black"
        app:iconGravity="end"
        android:layout_margin="10dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/title"
        android:text="@string/luxury_dresses_for_every_occasion"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginBottom="156dp"
        android:layout_marginStart="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="100dp"
        android:layout_width="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/white"
        android:layout_marginHorizontal="28dp"
        android:text="@string/next"
        android:textSize="24sp"
        android:textColor="@color/black"/>


</androidx.constraintlayout.widget.ConstraintLayout>